crates/review-buddy/tests/snapshots/frames_v02__frame_settings_5_remove_dusk_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: text(& render(& mut app))
---
 review buddy  ·  settings                                                                     Dusk
 Settings       ╭ Sources ─────────────────────────────────────────────────────────────────────────╮
                │ Where your pull and merge requests come from. Changes save to your config right… │
› Sources       │                                                                                  │
                │   on     name           host               sign-in    all token                  │
                │   on  GH github.com     github.com         gh         yes ✓ smorris · expires …  │
                │ › on  GL work           gitlab.work.ca     keyring    yes ✗ Couldn't sign in t…  │
                │   off GL old-lab        gitlab.old.example env:OLD_L… yes · not tested           │
            ╭ Remove source? ──────────────────────────────────────────────────────────╮           │
            │ Remove work (gitlab.work.ca)?                                            │           │
            │                                                                          │           │
            │ This takes the work source out of                                        │           │
            │ /home/u/.config/review-buddy/config.toml. Its pull and merge requests    │cted. To … │
            │ leave your queue. Nothing changes on gitlab.work.ca.                     │           │
            │                                                                          │           │
            │ The token in your keyring (review-buddy/gitlab.work.ca) stays unless you │           │
            │ remove it too.                                                           │           │
            │                                                                          │           │
            │ › No, keep it  ⏎ ‹                                                       │           │
            │   Remove the source  y                                                   │           │
            │   Remove the source and its keyring token  d                             │           │
            ╰──────────────────────────────────────────────────────────────────────────╯           │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                ╰──────────────────────────────────────────────────────────────────────────────────╯
 ⏎ choose  y remove  esc no, keep it
