crates/review-buddy/tests/snapshots/frames_v02__frame_settings_5_remove_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  settings                                                               Liminal HQ
 Settings       ╭ Sources ─────────────────────────────────────────────────────────────────────────╮
                │ Where your pull and merge requests come from. Changes save to your config right… │
› Sources       │                                                                                  │
                │   on     name           host               sign-in    all token                  │
                │   on  GH github.com     github.com         gh         yes ✓ smorris · expires …  │
                │ › on  GL work           gitlab.work.ca     keyring    yes ✗ Couldn't sign in t…  │
                │   off GL old-lab        gitlab.old.example env:OLD_L… yes · not tested           │
            ╭ Remove source? ──────────────────────────────────────────────────────────╮           │
            │ Remove work (gitlab.work.ca)?                                            │           │
            │                                                                          │           │
            │ This takes the work source out of                                        │           │
            │ /home/u/.config/review-buddy/config.toml. Its pull and merge requests    │cted. To … │
            │ leave your queue. Nothing changes on gitlab.work.ca.                     │           │
            │                                                                          │           │
            │ The token in your keyring (review-buddy/gitlab.work.ca) stays unless you │           │
            │ remove it too.                                                           │           │
            │                                                                          │           │
            │ › No, keep it  ⏎ ‹                                                       │           │
            │   Remove the source  y                                                   │           │
            │   Remove the source and its keyring token  d                             │           │
            ╰──────────────────────────────────────────────────────────────────────────╯           │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                │                                                                                  │
                ╰──────────────────────────────────────────────────────────────────────────────────╯
 ⏎ choose  y remove  esc no, keep it

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  settings"
0:88 D " Liminal HQ"
1:0 B " Settings"
1:16 D "╭"
1:17 BD " Sources"
1:26 D "─────────────────────────────────────────────────────────────────────────╮"
2:16 D "│"
2:18 D "Where your pull and merge requests come from. Changes save to your config right…"
2:99 D "│"
3:0 BR "› Sources"
3:16 D "│"
3:99 D "│"
4:16 D "│"
4:18 BD "  on     name           host               sign-in    all token"
4:99 D "│"
5:16 D "│"
5:18 B ""
5:24 B "GH"
5:72 D "yes"
5:99 D "│"
6:16 D "│"
6:18 BR "›"
6:20 R "on"
6:24 BR "GL"
6:26 R " work           gitlab.work.ca     keyring"
6:72 DR "yes"
6:75 R " ✗ Couldn't sign in t…"
6:99 D "│"
7:16 D "│"
7:18 B ""
7:20 D "off"
7:24 B "GL"
7:27 D "old-lab"
7:42 D "gitlab.old.example"
7:61 D "env:OLD_L…"
7:72 D "yes"
7:76 D "· not tested"
7:99 D "│"
8:12 B "╭ Remove source? ──────────────────────────────────────────────────────────╮"
8:99 D "│"
9:12 B "│"
9:14 B "Remove work (gitlab.work.ca)?"
9:87 B "│"
9:99 D "│"
10:12 B "│"
10:87 B "│"
10:99 D "│"
11:12 B "│"
11:87 B "│"
11:99 D "│"
12:12 B "│"
12:87 B "│"
12:99 D "│"
13:12 B "│"
13:87 B "│"
13:99 D "│"
14:12 B "│"
14:87 B "│"
14:99 D "│"
15:12 B "│"
15:14 D "The token in your keyring (review-buddy/gitlab.work.ca) stays unless you"
15:87 B "│"
15:99 D "│"
16:12 B "│"
16:14 D "remove it too."
16:87 B "│"
16:99 D "│"
17:12 B "│"
17:87 B "│"
17:99 D "│"
18:12 B "│"
18:14 BR "› No, keep it  ⏎ ‹"
18:87 B "│"
18:99 D "│"
19:12 B "│"
19:14 D "  Remove the source  y"
19:87 B "│"
19:99 D "│"
20:12 B "│"
20:14 D "  Remove the source and its keyring token  d"
20:87 B "│"
20:99 D "│"
21:12 B "╰──────────────────────────────────────────────────────────────────────────╯"
21:99 D "│"
22:16 D "│"
22:99 D "│"
23:16 D "│"
23:99 D "│"
24:16 D "│"
24:99 D "│"
25:16 D "│"
25:99 D "│"
26:16 D "│"
26:99 D "│"
27:16 D "│"
27:99 D "│"
28:16 D "╰──────────────────────────────────────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " choose"
29:11 B "y"
29:12 D " remove"
29:21 B "esc"
29:24 D " no, keep it"
